--- a/planet.html
+++ b/planet.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="utf-8">
     <title>Planets</title>>
-    <script> 
+    <script>
+    function init () { 
     var planet = document.getElementById("greenplanet");
     planet.innerHTML = "Red Alert: hit by phaser fire!"
+    }
+    window.onload = init;
     </script>
 </head>
 <body>
