--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
 <head>
     <meta charset="utf-8">
     <title>My blog</title>>
-    <script scr="index.js"></script>
+    <script> 
+    if (true == 5) {
+    console.log("A number equals a string!");
+} else {
+    console.log("No way a number equals a string");
+}
+    </script>
 </head>
 <body>
     <h1>Me blog</h1>
