--- a/test.html
+++ b/test.html
@@ -9,6 +9,20 @@
     if (presentableText.length > 0) {
         alert(presentableText);
     }
+    var emot = "XOxxOO";
+    var hugs = 0;
+    var kisses = 0;
+    emot = emot.trim();
+    emot = emot.toUpperCase();
+    for (var i =0; i<emot.length;i++) {
+        if (emot.charAt(i) === "X") {
+            hugs++;
+        } else if (emot.charAt(i) === "O") {
+            kisses++;
+        }
+    }
+    console.log(hugs);
+    condole.log(kisses);
     </script>
 </head>
 <body>
